fix scrollbar color

--- a/bundles/public/css/contacts.css
+++ b/bundles/public/css/contacts.css
@@ -327,7 +327,7 @@ ul.dealer .site-link {
     .nano {
         margin: 40px;
         width: 820px;
-        height: 600px;
+        height: 520px;
     }
 
     .nano .nano-content { padding: 10px; }
